added: sql injection safety, date sort issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -254,5 +254,10 @@ input {
 }
 
 body .syntaxhighlighter .line {
-    white-space: pre-wrap !important; /* make code wrap */
+    white-space: pre-wrap !important;
+}
+
+pre {
+    white-space: pre-wrap !important;
+    padding-right: 5px;
 }
