--- a/templates/snippet.html
+++ b/templates/snippet.html
@@ -23,7 +23,7 @@
     {% if snip.desc %}
         <div class="block" style="padding: 5px 5px; font-size: 14px; background-color: #f7f7f7;">
             <span class="mini_info" style="font-weight: bold;">description</span><br/>
-            <pre class="wrap">{{ snip.desc }}</pre>
+            <pre>{{ snip.desc }}</pre>
         </div>
         <span class="block_space"></span>
     {% endif %}
